<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ScrollView


        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="16dp"
                android:text="@string/header" />


            <TextView

                android:id="@+id/question_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="16dp"
                android:text="@string/question_1" />

            <TextView
                android:id="@+id/question_1_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="16dp"
                android:text="@string/question_1_text" />

            <EditText

                android:id="@+id/question_1_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/question_1_hint"
                android:inputType="textCapCharacters" />


            <TextView

                android:id="@+id/question_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="16dp"
                android:text="@string/question_2" />

            <TextView
                android:id="@+id/question_2_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/question_2_text" />

            <CheckBox
                android:id="@+id/question_2_answer_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:onClick="checkQuestionTwo"

                android:text="@string/question_2_answer_1" />

            <CheckBox

                android:id="@+id/question_2_answer_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"

                android:onClick="checkQuestionTwo"
                android:text="@string/question_2_answer_2" />

            <CheckBox
                android:id="@+id/question_2_answer_3"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"

                android:onClick="checkQuestionTwo"
                android:text="@string/question_2_answer_3" />

            <CheckBox
                android:id="@+id/question_2_answer_4"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"

                android:onClick="checkQuestionTwo"
                android:text="@string/question_2_answer_4" />

            <CheckBox
                android:id="@+id/question_2_answer_5"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"

                android:onClick="checkQuestionTwo"
                android:text="@string/question_2_answer_5" />

            <TextView

                android:id="@+id/question_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="16dp"
                android:text="@string/question_3" />

            <TextView
                android:id="@+id/question_3_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="16dp"
                android:text="@string/question_3_text" />

            <RadioGroup
                android:id="@+id/question_3_answer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/question_3_answer_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:text="@string/question_3_answer_1" />

                <RadioButton

                    android:id="@+id/question_3_answer_2"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/question_3_answer_2" />

                <RadioButton

                    android:id="@+id/question_3_answer_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:text="@string/question_3_answer_3" />
            </RadioGroup>

            <TextView

                android:id="@+id/question_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="16dp"
                android:text="@string/question_4" />

            <TextView
                android:id="@+id/question_4_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="16dp"
                android:text="@string/question_4_text" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/question_4_answer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/question_4_answer_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:text="@string/question_4_answer_1" />

                <RadioButton

                    android:id="@+id/question_4_answer_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:text="@string/question_4_answer_2" />

                <RadioButton


                    android:id="@+id/question_4_answer_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/question_4_answer_3" />
            </RadioGroup>

            <Button
                android:id="@+id/score_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:onClick="onClick"
                android:text="@string/score" />

        </LinearLayout>


    </ScrollView>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"

        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />

</LinearLayout>